repeat keyboard and deleted unsuded includes

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-3. good names: new .c files
+3. good names: new .c files screen2.c primitives.c
 8. fractal -> fdf
 9. norminate
 12. unused includes
