--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
 10. leaks
 	21. leak in gnl
 23. testiki
+11. bonus sheet
 ________________________________________________________________
 67. ramki dlya zooma i shifta (!)
 99. Pixel put on if black
