--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 	21. leak in gnl
 23. testiki
 11. bonus sheet
+53. Check repo max size (delete maps if needed)
 ________________________________________________________________
 67. ramki dlya zooma i shifta (!)
 99. Pixel put on if black
