--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 23. testiki
 11. bonus sheet
 53. Check repo max size (delete maps if needed)
+close file
 ________________________________________________________________
 67. ramki dlya zooma i shifta (!)
 99. Pixel put on if black
